# samosa_gg

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.config.yaml  setup.sh  todo.md
src/: lib.rs  main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/db_migrations/: schema.rs
src/db_migrations/migrations/2025-10-02-051602_new_tables/: down.sql  up.sql
src/db_migrations/migrations/2025-10-06-051732_settings_table/: up.sql
src/db_migrations/migrations/2025-10-06-115959_update_users_table/: down.sql  up.sql
src/db_migrations/migrations/2025-10-07-040134_tokens_table/: down.sql  up.sql
src/db_migrations/migrations/2025-10-07-041555_update_users_table/: down.sql  up.sql
src/db_models/: mod.rs  settings.rs  subaccounts.rs  tokens.rs  users.rs  wallets.rs
src/http_server/: mod.rs
src/http_server/controllers/: auth.rs  health.rs  mod.rs
src/http_server/middlewares/: authentication.rs
src/http_server/utils/: err_handler.rs  mod.rs
src/models/db/: mod.rs  subaccounts.rs  tokens.rs  users.rs  wallets.rs
src/telegram_bot/: mod.rs
src/telegram_bot/actions/: accounts.rs  add_to_group.rs  ask_order_amount.rs  balances.rs  cancel.rs  change_degen_mode.rs  change_notification.rs  chart.rs  close.rs  confirm_subaccount_deposit.rs  create_trading_account.rs  deposit_to_subaccount.rs  export_pk.rs  external_withdraw.rs  join_existing_clan.rs  limit_order_leverage.rs  mod.rs  open_position.rs  order_leverage.rs  place_limit_order.rs  place_order.rs  show_pk.rs  slippage.rs  stats.rs  transfer.rs  update_slippage.rs  withdraw.rs
src/telegram_bot/commands/: chart.rs  dashboard.rs  limit.rs  long.rs  mint.rs  mod.rs  positions.rs  settings.rs  short.rs  start.rs  stoploss.rs  takeprofit.rs  terminal.rs  wallet.rs
src/telegram_bot/states/: ask_slippage.rs  custom_slippage.rs  deposit_to_sub_amount.rs  deposit_to_subaccount.rs  external_withdraw_address.rs  external_withdraw_amount.rs  limit_order_margin.rs  limit_pair.rs  limit_price.rs  long_pair.rs  mod.rs  order_margin.rs  order_pair.rs  place_order_quote.rs  short_pair.rs  withdraw_address.rs  withdraw_amount.rs
src/utils/: aptos_client.rs  database_connection.rs  database_utils.rs  db_execution.rs  decibel_transaction.rs  market_indexer.rs  mod.rs  perps_math.rs  shutdown_utils.rs  starting_version.rs  view_requests.rs  wallet_transaction.rs
src/workers/: indexer_processor.rs  mod.rs
(+7 files in other folders)
